@@ -1,253 +1,139 @@
 package com.healthy.backend.service;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-
-import org.springframework.stereotype.Service;
-
-import com.healthy.backend.dto.survey.QuestionOption;
-import com.healthy.backend.dto.survey.QuestionResponse;
-import com.healthy.backend.dto.survey.StatusStudent;
-import com.healthy.backend.dto.survey.SurveyQuestionResponse;
-import com.healthy.backend.dto.survey.SurveyQuestionResultResponse;
-import com.healthy.backend.dto.survey.SurveyRequest;
-import com.healthy.backend.dto.survey.SurveyResultsResponse;
-import com.healthy.backend.dto.survey.SurveysResponse;
-import com.healthy.backend.entity.Categories;
-import com.healthy.backend.entity.Students;
-import com.healthy.backend.entity.SurveyQuestionOptions;
-import com.healthy.backend.entity.SurveyQuestionOptionsChoices;
-import com.healthy.backend.entity.SurveyQuestions;
-import com.healthy.backend.entity.SurveyResult;
-import com.healthy.backend.entity.Surveys;
+import com.healthy.backend.dto.survey.*;
+import com.healthy.backend.entity.*;
+import com.healthy.backend.enums.Role;
 import com.healthy.backend.enums.SurveyCategory;
 import com.healthy.backend.enums.SurveyStatus;
 import com.healthy.backend.exception.ResourceNotFoundException;
 import com.healthy.backend.mapper.SurveyMapper;
-import com.healthy.backend.repository.CategoriesRepository;
-import com.healthy.backend.repository.StudentRepository;
-import com.healthy.backend.repository.SurveyQuestionOptionsChoicesRepository;
-import com.healthy.backend.repository.SurveyQuestionOptionsRepository;
-import com.healthy.backend.repository.SurveyQuestionRepository;
-import com.healthy.backend.repository.SurveyRepository;
-import com.healthy.backend.repository.SurveyResultRepository;
-
+import com.healthy.backend.repository.*;
+import com.healthy.backend.security.TokenService;
+import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.*;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class SurveyService {
+    private final TokenService tokenService;
+    private final GeneralService generalService;
+
     private final SurveyQuestionOptionsChoicesRepository surveyQuestionOptionsChoicesRepository;
-    private final SurveyQuestionRepository surveyQuestionRepository;
-    private final SurveyMapper surveyMapper;
     private final SurveyRepository surveyRepository;
     private final SurveyQuestionOptionsRepository surveyQuestionOptionsRepository;
     private final CategoriesRepository categoriesRepository;
     private final SurveyResultRepository surveyResultRepository;
     private final StudentRepository studentRepository;
+    private final SurveyQuestionRepository surveyQuestionRepository;
+    private final ParentRepository parentRepository;
+
+    private final SurveyMapper surveyMapper;
 
 
-
-    public String totalScore( List<SurveyQuestions> question, String resultId) {
-       
-        Map<String, Integer> mapScore = new HashMap<>();
-        
-        question.forEach(question1 -> {
-            List<SurveyQuestionOptions> surveyQuestionOptionList = surveyQuestionOptionsRepository.findByQuestionID(question1.getQuestionID());
-            surveyQuestionOptionList.forEach(option -> {
-                mapScore.put(option.getOptionID(), option.getScore());
-            });
-        });
-        
-        int countQuestion = question.size() * 3;
-        int sum = 0;    
-        SurveyResult surveyResult = surveyResultRepository.findByResultID(resultId);
-        Surveys survey = surveyRepository.findById(surveyResult.getSurveyID())
-                .orElseThrow(() -> new ResourceNotFoundException("Not found survey" + surveyResult.getSurveyID()) );
-
-        Students studentResult = studentRepository.findById(surveyResult.getStudentID())
-                .orElseThrow(() -> new ResourceNotFoundException("Not found student"));
-        List<SurveyQuestionOptionsChoices> choicesList = surveyQuestionOptionsChoicesRepository.findByResultID(surveyResult.getResultID());
-
-        List<String> optionIds = choicesList.stream()
-            .map(SurveyQuestionOptionsChoices::getOptionID)
-            .collect(Collectors.toList());
-
-        System.out.println("OptionIDs from choicesList: " + optionIds);
-        Map<String, SurveyQuestionOptions> optionMap = surveyQuestionOptionsRepository.findAllById(
-                choicesList.stream().map(SurveyQuestionOptionsChoices :: getOptionID).collect(Collectors.toList())
-        ).stream().collect(Collectors.toMap(SurveyQuestionOptions :: getOptionID  , Function.identity()));
-
-        for (String optionId : optionIds) {
-            if (!optionMap.containsKey(optionId)) {
-                System.err.println("SurveyQuestionOptions not found for OptionID: " + optionId);
+    public List<List<SurveysResponse>> getAllSurveys(Users user) {
+        return switch (user.getRole()) {
+            case PARENT -> {
+                List<Students> children = parentRepository.findByUserID(user.getUserId()).getStudents();
+                yield children.stream().map(student -> getSurveyResult(student.getStudentID())).toList();
             }
-        }
-
-        for(SurveyQuestionOptionsChoices result : choicesList  ) {
-            SurveyQuestionOptions surveyQuestion = optionMap.get(result.getOptionID());
-            sum += mapScore.getOrDefault(surveyQuestion.getOptionID(), 0);
-        }    
-     
-        switch (survey.getCategoryID()) {
-            case "CAT001" -> studentResult.setStressScore(sum);
-            case "CAT002" -> studentResult.setAnxietyScore(sum);
-            case "CAT003" -> studentResult.setDepressionScore(sum);
-         default -> {
-            throw new IllegalArgumentException("Invalid category: " + survey.getCategoryID());
-        }
-        }
-
-        studentRepository.save(studentResult);
-        return sum + "/" + countQuestion;
-
+            case STUDENT -> {
+                String studentId = tokenService.getRoleID(user);
+                yield List.of(getSurveyResult(studentId));
+            }
+            case MANAGER, PSYCHOLOGIST -> {
+                List<Surveys> surveys = surveyRepository.findAll();
+                yield List.of(surveys.stream()
+                        .map(survey -> {
+                            return surveyMapper.buildManagerSurveysResponse(survey,
+                                    getTotalQuestion(survey),
+                                    getSurveyStatus(survey),
+                                    getTotalStudentDone(survey) + "/" + getTotalStudent());
+                        })
+                        .toList());
+            }
+            default -> throw new RuntimeException("You don't have permission to access");
+        };
     }
 
-    public SurveyResultsResponse getSurveyResults(String surveyId) {
-        Surveys survey = surveyRepository.findById(surveyId)
-                .orElseThrow(() -> new ResourceNotFoundException("SurveyId not found" + surveyId));
-        List<SurveyQuestions> surveyQuestionList = surveyQuestionRepository.findBySurveyID(surveyId);
-        List<SurveyResult> surveyResultList = surveyResultRepository.findBySurveyID(survey.getSurveyID());
+    public SurveyResultsResponse getSurveyResultsBySurveyID(HttpServletRequest request, String surveyId) {
+        Role role = tokenService.retrieveUser(request).getRole();
+        Surveys survey = surveyRepository.findById(surveyId).orElseThrow(() -> new ResourceNotFoundException("SurveyId not found" + surveyId));
+        return switch (role) {
+            case PARENT -> {
+                List<Students> children = parentRepository.findByUserID(tokenService.getRoleID(tokenService.retrieveUser(request))).getStudents();
+                List<SurveyResult> surveyResultList = children.stream().flatMap(child -> getSurveyResultByStudentIDAndSurveyID(surveyId, child.getStudentID()).stream()).toList();
+                yield surveyMapper.mapToListResultsResponse(survey,
+                        surveyResultList.stream()
+                                .map(surveyResult -> getStatusStudent(survey, surveyResult)).toList());
+            }
+            case STUDENT -> {
+                SurveyResult surveyResult = getSurveyResultByStudentIDAndSurveyID(surveyId, tokenService.getRoleID(tokenService.retrieveUser(request))).getFirst();
+                yield surveyMapper.mapToListResultsResponse(survey,
+                        List.of(getStatusStudent(survey, surveyResult)));
+            }
+            case MANAGER, PSYCHOLOGIST -> {
+                List<SurveyResult> surveyResultList = surveyResultRepository.findBySurveyID(survey.getSurveyID());
+                yield surveyMapper.mapToListResultsResponse(survey,
+                        surveyResultList.stream()
+                                .map(surveyResult -> getStatusStudent(survey, surveyResult)).toList());
+            }
+            default -> throw new RuntimeException("You don't have permission to access");
+        };
+    }
 
-        List<StatusStudent> statusStudentsList1 = new ArrayList<>();
+    private StatusStudent getStatusStudent(Surveys survey, SurveyResult surveyResult) {
+        return surveyMapper.maptoResultStudent1(
+                getStatusStudent(survey.getSurveyID(), surveyResult.getStudentID()),
+                surveyResult.getResult() + "/" + surveyResult.getMaxScore(),
+                surveyResult);
+    }
 
-        List<SurveyQuestionResultResponse> surveyQuestionResultList = surveyQuestionList.stream()
-            .map(questionList -> {
-                List<StatusStudent> status =  surveyResultList.stream().
-                    map(result -> {
-                        List<SurveyQuestionOptionsChoices> choices = surveyQuestionOptionsChoicesRepository.findByResultID(
-                            result.getResultID());
-                        SurveyResult studentResult = surveyResultRepository.findByResultID(result.getResultID());    
+    private List<SurveyResult> getSurveyResultByStudentIDAndSurveyID(String surveyID, String studentId) {
+        return surveyResultRepository.findSurveyIDAndStudentID(surveyID, studentId);
+    }
 
-                        Map<String, SurveyQuestionOptions> mapChoice = surveyQuestionOptionsRepository.findAllById(
-                            choices.stream().map(SurveyQuestionOptionsChoices :: getOptionID).collect(Collectors.toList()))
-                            .stream()
-                            .collect(Collectors.toMap(SurveyQuestionOptions :: getOptionID, Function.identity()));
+    public SurveyQuestionResponse getSurveyResultByStudentID(HttpServletRequest request, String surveyID, String studentId) {
 
-                            for(SurveyQuestionOptionsChoices sqoc : choices ) {
-                                SurveyQuestionOptions optionStudent = mapChoice.get(sqoc.getOptionID());
-                                if(Objects.equals(questionList.getQuestionID(), optionStudent.getQuestionID())) {          
-                                    StatusStudent mapToResultStudent = surveyMapper.maptoResultStudent(optionStudent, studentResult);                                       
-                                    return mapToResultStudent;                                                
+        studentId = tokenService.validateRequestStudentID(request, studentId);
+
+        if (!surveyResultRepository.existsBySurveyIDAndStudentID(surveyID, studentId)) {
+            throw new ResourceNotFoundException("No survey found for surveyID " + surveyID + " with studentID " + studentId);
+        }
+
+        Surveys survey = surveyRepository.findById(surveyID).orElseThrow(
+                () -> new ResourceNotFoundException("No survey found for surveyID " + surveyID));
+        SurveyResult surveyResult = surveyResultRepository.findBySurveyIDAndStudentID(surveyID, studentId);
+        List<SurveyQuestions> surveyQuestions = surveyQuestionRepository.findBySurveyID(surveyID);
+        if (surveyQuestions.isEmpty()) {
+            throw new ResourceNotFoundException("No questions found for surveyID " + surveyID);
+        }
+        List<QuestionResponse> questionList = surveyQuestions
+                .stream()
+                .map(questions -> {
+                            List<QuestionOption> questionOption = getQuestionResponse(questions);
+                            questionOption.forEach(option -> {
+                                if (option.getAnswerID().equals(surveyResult.getChoices().get(surveyQuestions.indexOf(questions)).getOptionID())) {
+                                    option.setChecked(true);
                                 }
-                            }
-                    return null;
-                    })
-                .filter(Objects :: nonNull)
-                .collect(Collectors.toList());    
-            return surveyMapper.mapToSurveyQuestionResponse(
-                questionList,
-                status);
-            })
-        .collect(Collectors.toList()); 
-
-        surveyResultList.forEach(score -> {
-            SurveyResult studentResult = surveyResultRepository.findByResultID(score.getResultID());
-            StatusStudent mapToResultStudent1 = surveyMapper.maptoResultStudent1(
-                getStatusStudent(survey.getSurveyID(), studentResult.getStudentID()),
-                totalScore(surveyQuestionList, score.getResultID()),
-                score);
-                statusStudentsList1.add(mapToResultStudent1);
-        });
-           
-        return surveyMapper.mapToSurveyResultsResponse1(survey, surveyQuestionResultList, statusStudentsList1);    
-        
+                            });
+                            return surveyMapper.buildQuestionResponse(
+                                    questionOption,
+                                    questions,
+                                    surveyQuestions.indexOf(questions));
+                        }
+                )
+                .toList();
+        return surveyMapper.buildSurveyResultResponse(questionList,
+                survey,
+                getSurveyStatus(survey),
+                surveyResult.getResult() + "/" + surveyResult.getMaxScore());
     }
-    
-
-    public String getStatusStudent(String surveyId, String studentId) {
-    List<SurveyResult> resultList = surveyResultRepository.findBySurveyID(surveyId);
-    
-    for (SurveyResult surveyCheck : resultList) {
-        if (surveyCheck.getStudentID() != null && Objects.equals(studentId, surveyCheck.getStudentID())) {
-            return "Finished";
-        }
-    }
-    
-    return "Not Finished";
-}
-
-    public StatusStudent getStudentIDSurveyResults(String surveyId, String studentId) {
-        Surveys survey = surveyRepository.findById(surveyId)
-                .orElseThrow(() -> new ResourceNotFoundException("Survey not found by"+ surveyId));
-
-        List<SurveyResult> surveyResultList = surveyResultRepository.findBySurveyID(survey.getSurveyID());
-        
-        if(surveyResultList.isEmpty()) {
-            SurveyResult emptyStudent = new SurveyResult();
-            emptyStudent.setStudentID(studentId);
-            return surveyMapper.buildStatusStudent(emptyStudent, "Not Finished", "0");
-        }
-        else {
-            boolean found = surveyResultList.stream()
-                .anyMatch(check -> studentId != null && studentId.equals(check.getStudentID()));
-
-            if(!found) {
-                SurveyResult emptyStudent = new SurveyResult();
-                emptyStudent.setStudentID(studentId);
-                return surveyMapper.buildStatusStudent(emptyStudent, "Not Finished", "0");
-            }    
-        }
-        return null;
-    }
-
-
-    public List<SurveysResponse> getAllSurveys() {
-    List<Surveys> surveys = surveyRepository.findAll();
-
-    if (surveys.isEmpty()) {
-        throw new ResourceNotFoundException("No surveys found");
-    }
-
-    return surveys.stream().map(survey -> {
-        List<SurveyQuestionResultResponse> surveyQuestionResultList = new ArrayList<>();
-        List<SurveyQuestions> surveyQuestionsList = surveyQuestionRepository.findBySurveyID(survey.getSurveyID());
-        // System.out.println("surveyId" + survey.getSurveyID());
-        
-
-        surveyQuestionsList.forEach(question -> {
-            List<SurveyQuestionOptions> questionOptions = surveyQuestionOptionsRepository.findByQuestionID(question.getQuestionID());
-            List<QuestionOption> questionOptionList = questionOptions.stream()
-                    .map(option -> surveyMapper.mapToQuestionOption(option))
-                    .collect(Collectors.toList());
-
-            SurveyQuestionResultResponse sqr = surveyMapper.mapToQuestion(question, questionOptionList);
-            surveyQuestionResultList.add(sqr);
-        });
-
-        
-        List<SurveyResult> surveyResultList = surveyResultRepository.findBySurveyID(survey.getSurveyID());
-        // System.out.println("surveyId" + surveyResultList);
-        List<StatusStudent> statusStudentList = new ArrayList<>();
-
-        for (SurveyResult surveyResult : surveyResultList) {
-            String studentId = surveyResult.getStudentID();
-            String status = getStatusStudent(survey.getSurveyID(), studentId); 
-            String score = totalScore(surveyQuestionsList, surveyResult.getResultID()); 
-            statusStudentList.add(surveyMapper.buildStatusStudent(surveyResult, status, score));
-        }
-
-        
-        List<String> allStudentIds = studentRepository.findAllStudentIds(); 
-        for (String studentId : allStudentIds) {
-            boolean found = statusStudentList.stream()
-                .anyMatch(status -> studentId != null && studentId.equals(status.getStudentId()));
-            if (!found) {
-                SurveyResult emptySurveyResult = new SurveyResult();
-                emptySurveyResult.setStudentID(studentId);
-                statusStudentList.add(surveyMapper.buildStatusStudent(emptySurveyResult, "Not Finished", "0"));
-            }
-        }
-        return surveyMapper.buildSurveysResponse2(survey, surveyQuestionsList.size(), statusStudentList);
-    })
-    .toList();
-}
-
 
 
     public void updateSurveyQuestion(String surveyID, SurveyQuestionResponse surveyQuestionResponse) {
@@ -290,7 +176,6 @@ public class SurveyService {
     }
 
     public SurveyQuestionResponse getSurveyQuestion(String surveyID) {
-
         Surveys surveys = surveyRepository.findById(surveyID).orElseThrow(
                 () -> new ResourceNotFoundException("No survey found for surveyID " + surveyID)
         );
@@ -298,106 +183,92 @@ public class SurveyService {
         if (surveyQuestions.isEmpty()) {
             throw new ResourceNotFoundException("No questions found for surveyID " + surveyID);
         }
-
         List<QuestionResponse> questionList = surveyQuestions
                 .stream()
                 .map(questions -> {
-                            Integer id = surveyQuestions.indexOf(questions);
-                            List<QuestionOption> options =
-                                    surveyQuestionOptionsRepository
-                                            .findByQuestionID(questions.getQuestionID())
-                                            .stream()
-                                            .map(answer -> new QuestionOption(
-                                                    answer.getScore(), answer.getOptionText(), answer.getOptionID()))
-                                            .toList();
-                            return surveyMapper.buildQuestionResponse
-                                    (options, questions, id);
+                            return surveyMapper.buildQuestionResponse(
+                                    getQuestionResponse(questions),
+                                    questions,
+                                    surveyQuestions.indexOf(questions));
                         }
                 )
                 .toList();
         return surveyMapper.buildSurveyQuestionResponse(questionList, surveys);
     }
 
-
-    public String getLastIdInDB(String index) {
-        String prefix = index.replaceAll("\\d", "");
-        String numberPart = index.replaceAll("\\D", "");
-
-        if (numberPart.isEmpty()) {
-            throw new IllegalArgumentException("No numeric found in index: " + index);
-        }
-
-        int currentID = Integer.parseInt(numberPart);
-        try {
-            currentID = Integer.parseInt(numberPart);
-        } catch (NumberFormatException e) {
-            throw new IllegalArgumentException("Invalid numeric part in index: " + numberPart);
-        }
-        int newID = currentID + 1;
-        String formatID = prefix + String.format("%0" + numberPart.length() + "d", newID);
-
-        return formatID;
+    private List<QuestionOption> getQuestionResponse(SurveyQuestions questions) {
+        return surveyQuestionOptionsRepository
+                .findByQuestionID(questions.getQuestionID())
+                .stream()
+                .map(surveyMapper::buildNewQuestionOption)
+                .toList();
     }
 
 
-    public void addSurveyQuestion(String surveyId, SurveyQuestionResponse questionResponse) {
-        List<SurveyQuestions> surveyQuestion = surveyQuestionRepository.findBySurveyID(surveyId);
-        if (surveyQuestion.isEmpty()) {
-            throw new ResourceNotFoundException("Not found survey for " + surveyId);
-        }
+    public void addSurveyQuestion(HttpServletRequest request, String surveyId, SurveyQuestionResponse questionResponse) {
 
-        for (QuestionResponse questionRes : questionResponse.getQuestionList()) {
-
-            SurveyQuestions newQuestion = surveyQuestionRepository.findFirstByOrderByQuestionIDDesc();
-            System.out.println("newQuestion.." + newQuestion.getQuestionID());
-            String latestQuestion = (newQuestion != null) ? getLastIdInDB(newQuestion.getQuestionID()) : "Q0001";
-
-            // System.out.println("newQuestion1.." + latestQuestion);
-
-            SurveyQuestions surveyQuestion1 = new SurveyQuestions();
-            surveyQuestion1.setQuestionText(questionRes.getQuestionText());
-            surveyQuestion1.setQuestionID(latestQuestion);
-            surveyQuestion1.setSurveyID(surveyId);
-
-            SurveyCategory categories;
-            try {
-                categories = SurveyCategory.valueOf(questionRes.getQuestionCategory());
-            } catch (IllegalArgumentException ex) {
-                throw new ResourceNotFoundException("Category not found " + questionRes.getQuestionCategory());
-            }
-
-            Categories category = categoriesRepository.findByCategoryName(categories);
-
-            surveyQuestion1.setCategoryID(category.getCategoryID());
-            surveyQuestionRepository.save(surveyQuestion1);
-
-            List<SurveyQuestionOptions> optionsList = new ArrayList<>();
-            List<QuestionOption> questionOption = questionRes.getQuestionOptions();
-
-            String nextAnsId = null;
-            int index = 0;
-            SurveyQuestionOptions lastAns = null;
-            for (QuestionOption QO : questionOption) {
-                SurveyQuestionOptions option = new SurveyQuestionOptions();
-                option.setOptionText(QO.getLabel());
-                option.setScore(QO.getValue());
-
-                if (index == 0) {
-                    lastAns = surveyQuestionOptionsRepository.findFirstByOrderByOptionIDDesc();
-                    nextAnsId = lastAns.getOptionID();
+        Role role = tokenService.retrieveUser(request).getRole();
+        switch (role) {
+            case MANAGER:
+            case PSYCHOLOGIST:
+                List<SurveyQuestions> surveyQuestion = surveyQuestionRepository.findBySurveyID(surveyId);
+                if (surveyQuestion.isEmpty()) {
+                    throw new ResourceNotFoundException("Not found survey for " + surveyId);
                 }
 
-                String newAns = getLastIdInDB(nextAnsId);
-                nextAnsId = newAns;
-                option.setQuestionID(newAns);
-                option.setQuestionID(latestQuestion);
-                optionsList.add(option);
-                index++;
-            }
-            surveyQuestionOptionsRepository.saveAll(optionsList);
+                for (QuestionResponse questionRes : questionResponse.getQuestionList()) {
 
+                    SurveyQuestions newQuestion = surveyQuestionRepository.findFirstByOrderByQuestionIDDesc();
+                    System.out.println("newQuestion.." + newQuestion.getQuestionID());
+                    String latestQuestion = generalService.generateSurveyQuestionId();
+
+
+                    SurveyQuestions surveyQuestion1 = new SurveyQuestions();
+                    surveyQuestion1.setQuestionText(questionRes.getQuestionText());
+                    surveyQuestion1.setQuestionID(latestQuestion);
+                    surveyQuestion1.setSurveyID(surveyId);
+
+                    SurveyCategory categories;
+                    try {
+                        categories = SurveyCategory.valueOf(questionRes.getQuestionCategory());
+                    } catch (IllegalArgumentException ex) {
+                        throw new ResourceNotFoundException("Category not found " + questionRes.getQuestionCategory());
+                    }
+
+                    Categories category = categoriesRepository.findByCategoryName(categories);
+
+                    surveyQuestion1.setCategoryID(category.getCategoryID());
+                    surveyQuestionRepository.save(surveyQuestion1);
+
+                    List<SurveyQuestionOptions> optionsList = new ArrayList<>();
+                    List<QuestionOption> questionOption = questionRes.getQuestionOptions();
+
+                    String nextAnsId = null;
+                    int index = 0;
+                    SurveyQuestionOptions lastAns = null;
+                    for (QuestionOption QO : questionOption) {
+                        SurveyQuestionOptions option = new SurveyQuestionOptions();
+                        option.setOptionText(QO.getLabel());
+                        option.setScore(QO.getValue());
+
+                        if (index == 0) {
+                            lastAns = surveyQuestionOptionsRepository.findFirstByOrderByOptionIDDesc();
+                            nextAnsId = lastAns.getOptionID();
+                        }
+
+                        String newAns = generalService.generateQuestionOptionId();
+                        nextAnsId = newAns;
+                        option.setQuestionID(newAns);
+                        option.setQuestionID(latestQuestion);
+                        optionsList.add(option);
+                        index++;
+                    }
+                    surveyQuestionOptionsRepository.saveAll(optionsList);
+                }
+
+            default:
+                throw new RuntimeException("You don't have permission to access");
         }
-
     }
 
 
@@ -419,7 +290,7 @@ public class SurveyService {
                 aswersDesc1 = answerDesc.getOptionID();
             }
 
-            String numberOfAns = getLastIdInDB(aswersDesc1);
+            String numberOfAns = generalService.generateQuestionOptionId();
             aswersDesc1 = numberOfAns;
 
             options.setQuestionID(numberOfAns);
@@ -433,7 +304,7 @@ public class SurveyService {
         surveyQuestionOptionsRepository.saveAll(optionsList);
     }
 
-    public void updateSurveyStatus( String surveyId, SurveyRequest status) {
+    public void updateSurveyStatus(String surveyId, SurveyRequest status) {
         Surveys survey = surveyRepository.findById(surveyId)
                 .orElseThrow(() -> new ResourceNotFoundException("Survey Not found"));
         survey.setStatus(SurveyStatus.valueOf(status.getStatus()));
@@ -441,47 +312,33 @@ public class SurveyService {
     }
 
 
-    public String calculateTotalRightQuestion(List<SurveyQuestions> questions, List<String> options, Surveys survey, Students student) {
+    private String calculateTotalRightQuestion(List<SurveyQuestions> questions, List<String> options, Surveys survey, Students student) {
         Map<String, Integer> mapScore = new HashMap<>();
         int sum = 0;
         int count = questions.size() * 3;
-        
+
         questions.forEach(question -> {
 
             List<SurveyQuestionOptions> surveyOption = surveyQuestionOptionsRepository.findByQuestionID(question.getQuestionID());
             surveyOption.forEach(s -> {
-                mapScore.put(s.getOptionID(), s.getScore());        
+                mapScore.put(s.getOptionID(), s.getScore());
             });
         });
 
-        for(String surveyQuestionOption : options) {
+        for (String surveyQuestionOption : options) {
             sum += mapScore.getOrDefault(surveyQuestionOption, 0);
         }
-        
-        // switch (survey.getCategoryID()) {
-        //     case "CAT001" :
-        //         student.setStressScore(sum);
-        //         break;
-        //     case "CAT002" :
-        //         student.setAnxietyScore(sum);
-        //         break;
-        //     case "CAT003" :
-        //         student.setDepressionScore(sum);
-        //         break;    
-        //     default:
-        //         break;
-        // }
         switch (survey.getCategoryID()) {
             case "CAT001" -> student.setStressScore(sum);
             case "CAT002" -> student.setAnxietyScore(sum);
             case "CAT003" -> student.setDepressionScore(sum);
-         default -> {
-            throw new IllegalArgumentException("Invalid category: " + survey.getCategoryID());
-        }
+            default -> {
+                throw new IllegalArgumentException("Invalid category: " + survey.getCategoryID());
+            }
         }
 
         return sum + "/" + count;
-          
+
     }
 
 
@@ -489,54 +346,53 @@ public class SurveyService {
         StatusStudent status = new StatusStudent();
 
         Surveys survey = surveyRepository.findById(surveyId)
-            .orElseThrow(() -> new ResourceNotFoundException("Not found survey"));
+                .orElseThrow(() -> new ResourceNotFoundException("Not found survey"));
 
         List<SurveyQuestions> surveyQuestion = surveyQuestionRepository.findBySurveyID(survey.getSurveyID());
         String check = null;
-        for(String option : optionId) {
-            if(Objects.equals(check, option)) {
+        for (String option : optionId) {
+            if (Objects.equals(check, option)) {
                 return null;
             }
             check = option;
         }
 
         Students student = studentRepository.findById(studentId)
-            .orElseThrow(() -> new ResourceNotFoundException("Not found student"));
+                .orElseThrow(() -> new ResourceNotFoundException("Not found student"));
 
         String total = calculateTotalRightQuestion(surveyQuestion, optionId, survey, student);
 
-        if(total != null) {
+        if (total != null) {
             SurveyResult surveyResult = new SurveyResult();
-            String resultId = surveyResultRepository.findLastResultId();
-            
-            surveyResult.setResultID(resultId);
+            String newResultId = generalService.generateSurveyResultId();
+
+            surveyResult.setResultID(newResultId);
             surveyResult.setStudentID(studentId);
             surveyResult.setSurveyID(surveyId);
-            
+
             surveyResultRepository.save(surveyResult);
 
-            if(surveyResult.getResultID() != null) {
+            if (surveyResult.getResultID() != null) {
                 saveSurveyOptionsChoice(surveyResult.getResultID(), optionId);
 
                 status = surveyMapper.maptoResultStudent1(
-                getStatusStudent(surveyId, studentId),
-                total,
-                surveyResult);
-                if(status == null) {
+                        getStatusStudent(surveyId, studentId),
+                        total,
+                        surveyResult);
+                if (status == null) {
                     return surveyMapper.maptoResultStudent1("0", "Not Finished", surveyResult);
                 }
 
             }
-        } 
+        }
         return status;
     }
 
-    public void saveSurveyOptionsChoice(String resultID, List<String> optionId) {
+    private void saveSurveyOptionsChoice(String resultID, List<String> optionId) {
         List<SurveyQuestionOptionsChoices> choiceList = new ArrayList<>();
-        for(String surveyQuestionOption : optionId) {
+        for (String surveyQuestionOption : optionId) {
             SurveyQuestionOptions question = surveyQuestionOptionsRepository.findByOptionID(surveyQuestionOption);
             String questionId = question.getQuestionID();
-            
 
             SurveyQuestionOptionsChoices sqc = new SurveyQuestionOptionsChoices(resultID, questionId, surveyQuestionOption);
             choiceList.add(sqc);
@@ -544,4 +400,88 @@ public class SurveyService {
         surveyQuestionOptionsChoicesRepository.saveAll(choiceList);
     }
 
+    private List<SurveysResponse> getSurveyResult(String studentId) {
+        List<SurveyResult> surveyResultList = surveyResultRepository.findByStudentID(studentId);
+        if (surveyResultList.isEmpty()) {
+            return List.of();
+        }
+        List<Surveys> surveyList = surveyRepository.findAll();
+        HashMap<String, String> map = new HashMap<>();
+        for (Surveys survey : surveyList) {
+            map.put(survey.getSurveyID(), getStatusStudent(survey.getSurveyID(), studentId));
+        }
+        return surveyList.stream()
+                .map(survey -> {
+                    if (map.get(survey.getSurveyID()).equals("NOT COMPLETED")) {
+                        return surveyMapper.buildSurveysResponse(
+                                survey,
+                                getTotalQuestion(survey),
+                                map.get(survey.getSurveyID()),
+                                "0/0"
+                        );
+                    }
+                    SurveyResult surveyResult = surveyResultRepository.findByStudentIDAndSurveyID(studentId, survey.getSurveyID());
+                    return surveyMapper.buildSurveysResponse(
+                            survey,
+                            getTotalQuestion(survey),
+                            map.get(survey.getSurveyID()),
+                            surveyResult.getResult() + "/" + surveyResult.getMaxScore()
+                    );
+                })
+                .toList();
+    }
+
+    @Transactional
+    public int calculateTotalScore(List<SurveyQuestionOptionsChoices> questionOptionsChoices) {
+        return questionOptionsChoices.stream().mapToInt(choices -> {
+            return choices.getOptions().getScore();
+        }).sum();
+    }
+
+    @Transactional
+    public int calculateTotalScore(String resultID) {
+        SurveyResult surveyResult = surveyResultRepository.findByIdWithChoices(resultID);
+        return surveyResult.getChoices().stream()
+                .map(SurveyQuestionOptionsChoices::getOptions) // Avoid null options
+                .map(SurveyQuestionOptions::getScore)
+                .mapToInt(Integer::intValue)
+                .sum(); // Sum all
+    }
+
+
+    public int calculateMaxScore(Surveys surveys) {
+        List<SurveyQuestions> surveyQuestionsList = surveyQuestionRepository.findBySurveyID(surveys.getSurveyID());
+
+        return surveyQuestionsList.stream()
+                .mapToInt(question ->
+                        surveyQuestionOptionsRepository.findByQuestionID(question.getQuestionID())
+                                .stream()
+                                .mapToInt(SurveyQuestionOptions::getScore)
+                                .max() // Get max score for the question
+                                .orElse(0)
+                )
+                .sum();
+    }
+
+    private int getTotalQuestion(Surveys surveys) {
+        return (int) surveyQuestionRepository.countBySurveyID(surveys.getSurveyID());
+    }
+
+    private int getTotalStudentDone(Surveys surveys) {
+        return (int) surveyResultRepository.countBySurveyID(surveys.getSurveyID());
+    }
+
+    private int getTotalStudent() {
+        return (int) studentRepository.count();
+    }
+
+    private String getSurveyStatus(Surveys surveys) {
+        return getTotalStudent() == getTotalStudentDone(surveys) ? "COMPLETED" : "NOT COMPLETED";
+    }
+
+    private String getStatusStudent(String surveyId, String studentId) {
+        return !surveyResultRepository.existsBySurveyIDAndStudentID(surveyId, studentId)
+                ? "NOT COMPLETED"
+                : "COMPLETED";
+    }
 }
